fixed vh so no more unnecessary y overflow

--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -3,6 +3,7 @@
 
 .root {
   margin: 2em 0 4em;
+  padding: 2em;
   height: 100vh;
   width: auto;
 }
